# StrictMeta

./: CONTRIBUTING.md  Readme.md  pyproject.toml
StrictMeta/: __init__.py  strict_meta.py
tests/: test_edge_cases.py  test_strict_meta.py
