[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "StrictMeta"
version = "0.1.0"
description = "A metaclass to enforce strict type checking and metadata handling for classes."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    # Add any dependencies here
]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]  # Exclude the 'tests' directory
